version/0.21/_sources/api/solver/_autosummary/settings/scattering_phase_function.rst.txt
:orphan:

.. _scattering_phase_function:

scattering_phase_function
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.scattering_phase_function.scattering_phase_function
    :show-inheritance:

.. rubric:: Attributes

====================================================   ====================================================

Attribute                                                                                           Summary

====================================================   ====================================================
:ref:`option <option_12>`                                  Select method for calculating material property.

:ref:`value <value_11>`                                                Specify the constant property value.

:ref:`delta_eddington <delta_eddington>`                                          Delta Eddington settings.

:ref:`user_defined_function <user_defined_function>`                         Specify user defined function.

====================================================   ====================================================

.. rubric:: Included in:

======================================   ====================================

Parent                                                                Summary

======================================   ====================================
:ref:`fluid_child <fluid_child>`                'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`          'child_object_type' of mixture.

:ref:`material_child <material_child>`       'child_object_type' of material.

======================================   ====================================

