version/0.28/_sources/api/solver/_autosummary/settings/scattering_phase_function.rst.txt
:orphan:

.. _scattering_phase_function:

scattering_phase_function
=========================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.scattering_phase_function
    :show-inheritance:

.. rubric:: Attributes

====================================================   =======================================================

Attribute                                                                                              Summary

====================================================   =======================================================
:ref:`option <option_26>`                                                     Select material property method.

:ref:`value <value_15>`                                                       Specify constant property value.

:ref:`delta_eddington <delta_eddington>`                   Scattering phase function Delta Eddington settings.

:ref:`user_defined_function <user_defined_function>`                   Specify user-defined property function.

====================================================   =======================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`fluid_child <fluid_child>`                                              'child_object_type' of fluid.

:ref:`solid_child <solid_child>`                                              'child_object_type' of solid.

:ref:`mixture_child <mixture_child>`                                        'child_object_type' of mixture.

:ref:`volumetric_species_child <volumetric_species_child>`       'child_object_type' of volumetric_species.

:ref:`material_3_child <material_3_child>`                                 'child_object_type' of material.

==========================================================   ==============================================

